...
    onItemClicked = onDrawerItemClicked,
    trailingContent = {
      if (uiState.deleteAllState != null) {
        Icons.Undo(onClick = { onUiEvent(UndoDeleteAllActionClicked) })
      } else {
        Icons.Delete(
          modifier = Modifier.testTag("deleteAllAction"),
          onClick = { onUiEvent(DeleteAllActionButtonClicked) }
        )
      }
    }
  ) { paddingValues ->
    Column(
...
          text = stringResource(R.string.bonus_salary_reset_warning),
          textAlign = TextAlign.Start,
          style = MaterialTheme.typography.bodySmall
        )
        Spacer.Vertical(8.dp)
        Button.Primary(
          modifier = Modifier.testTag("deleteAllButton"),
          title = stringResource(
            R.string.bonus_salary_reset_button_format,
            uiState.deleteAllState.buttonClickCounter
          ),
          onClick = { onUiEvent(DeleteButtonClicked) }
        )
...
